# CNG-242

./: University Organisation Tree.hs
Campus Management System/: CMakeLists.txt  building.cpp  building.h  classroom.cpp  classroom.h  main.cpp  office.cpp  office.h  room.cpp  room.h  university.cpp  university.h
Gold-Rush Alaska Game/: Bear.cpp  Bear.h  Element.cpp  Element.h  Food.cpp  Food.h  Gold.cpp  Gold.h  Grid.cpp  Grid.h  MedicalSupplies.cpp  MedicalSupplies.h  Player.cpp  Player.h  WildAnimals.cpp  WildAnimals.h  Wolf.cpp  Wolf.h  Wood.cpp  Wood.h  main.cpp
